tests/type_errors/var2.pylambda
x = 5 + 3;
y = true == false;
print x + y;